WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125272
[Win] Exiting from Media Full Screen mode via 'escape' key does not work properly
https://bugs.webkit.org/show_bug.cgi?id=125272
Summary
[Win] Exiting from Media Full Screen mode via 'escape' key does not work prop...
Brent Fulgham
Reported
2013-12-04 17:58:16 PST
If you enter full screen video mode, and then exit using the "Escape" key, WebKit will not re-enter fullscreen mode. If you use the media control to enter/exit fullscreen mode, everything works properly. This bug is caused by improper cleanup of the Document::m_fullScreenElementStack member: When logic passes through the JavaScript layer, it pops the most recent full screen element off of the stack because it calls Document::webkitExitFullscreen(), which pops the element before calling the client's exitFullScreenForElement. The 'escape' key handler in Windows calls Document::webkitWillExitFullScreenForElement(Element*), which bypasses the pop operation and leaves the element on the stack. Subsequent calls to enter full screen mode fail because WebCore believes a full screen controller is already in place. The proposed solution is to modify the WebKit/win/WebView implementation to use "webkitExitFullscreen" rather than "webkitWillExitFullScreenForElement" to more closely match that logic of the media control interface.
Attachments
Patch
(1.33 KB, patch)
2013-12-05 09:15 PST
,
Brent Fulgham
jer.noble
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2013-12-05 09:15:31 PST
Created
attachment 218520
[details]
Patch
Jer Noble
Comment 2
2013-12-05 10:19:03 PST
Comment on
attachment 218520
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=218520&action=review
r=me, with nit.
> Source/WebKit/win/WebView.cpp:6958 > - m_fullScreenElement->document().webkitWillExitFullScreenForElement(m_fullScreenElement.get()); > + m_fullScreenElement->document().webkitExitFullscreen();
This should probably use webkitCancelFullScreen(), which will pop the entire full screen element stack.
Brent Fulgham
Comment 3
2013-12-05 12:12:06 PST
Committed
r160184
: <
http://trac.webkit.org/changeset/160184
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug