[Win] Exiting from Media Full Screen mode via 'escape' key does not work properly https://bugs.webkit.org/show_bug.cgi?id=125272

Reviewed by Jer Noble.

* WebView.cpp:
(WebView::fullScreenClientWillExitFullScreen): Change to webkitCancelFullScreen method call
to more closely match Media Control behavior.


Canonical link: https://commits.webkit.org/143407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160184 268f45cc-cd09-0410-ab3c-d52691b4dbfc